# Bmatching

./: .bazelrc  .gitignore  BUILD  CMakeLists.txt  LICENSE  README.md  WORKSPACE  compile.sh  spack.yaml
.github/workflows/: ci.yml  release.yml
app/: BUILD  CMakeLists.txt  app.cc  app_io.proto  cli.cc
app/algorithms/: BUILD  CMakeLists.txt  algorithm_impl.cc  algorithm_impl.h  bsuitor.cc  bsuitor.h  greedy.cc  greedy.h  ilp.cc  ilp.h  ilp_exact.cc  ilp_exact.h  ils.cc  ils.h  kss.cc  kss.h  presolved_ilp.cc  presolved_ilp.h  reductions.cc  reductions.h  scip.cc  scip.h  unfold.cc  unfold.h
bmatching/: CMakeLists.txt
bmatching/greedy/: BUILD  CMakeLists.txt  ordered.h
bmatching/ilp/: BUILD  CMakeLists.txt  ilp_ball.h  ilp_exact.h
bmatching/ils/: BUILD  CMakeLists.txt  ils.h
bmatching/reductions_sorted/: BUILD  CMakeLists.txt  driver.h  foldings.h  prune.h  removals.h
bmatching/scip/: BUILD  CMakeLists.txt  solver.h
build_regression/: compare.sh  report.txt
build_regression/testdata/: hyper.hgr  medium.hgr
cmake/: FindGurobi.cmake
ds/: BUILD  CMakeLists.txt  bipartite_impl.h  bmatching.cc  bmatching.h  flat_bipartite_impl.h  indexed_priority_queue.h  modifiable_hypergraph.cc  modifiable_hypergraph.h  modifiable_hypergraph_test.cc  replay_buffer.h  weight_sorted_bipartite_impl.h
io/: BUILD  CMakeLists.txt  graph_reader.h  hgr_reader.h  hgr_reader_test.cc  hgr_validator.cc  hgr_without_weights_to_weighted_and_mtx.cc  hgr_writer.h  import.cc  mtx_reader.h  mtx_to_unihypergraph.cc  write_mtx.cc
others/: easylogging++.h
others/absl/status/: statusor.h
reproducibility/: reproducibility.md
runner/: BUILD  CMakeLists.txt  fork_runner.cc  generate_experiment_config.cc  hypergraph_storage_system.cc  hypergraph_storage_system.h  runner.cc
spack_packages/: repo.yaml
tools/: BUILD  CMakeLists.txt  binary_to_textproto.cc
tools/plot/: BUILD  dataloader.py  extract_exact.py  optperfprofpy.py  plot.py  requirements.txt  stats.py  weight.py
utils/: BUILD  CMakeLists.txt  random.h  range.h  systeminfo.cc  systeminfo.h
utils/workspace/: BUILD.easyloggingpp  BUILD.soplex  BUILD.wide_integer
utils/workspace/gurobi/: BUILD.bazel.in
